fix checkboxes in modal dialogs (+ dark mode)

--- a/ui/styles/app.less
+++ b/ui/styles/app.less
@@ -134,6 +134,40 @@ html, body {
     display: flex;
     height: 2.5rem;
     align-items: center;
+    justify-content: flex-start;
+    margin-left: -2px;
+
+    .switchable {
+        border: 1px solid #dbdbdb !important;
+        box-shadow: inset 0 0.0625em 0.125em rgb(10 10 10 / 5%) !important;
+        border-radius: 4px;
+
+        &:hover {
+            border-color: #b5b5b5 !important;
+        }
+
+        &::before {
+            border-color: #363636 !important;
+        }
+
+        &:checked {
+            background: transparent !important;
+        }
+    }
+}
+
+.dark .inline-switchable-container {
+    .switchable {
+        border: 1px solid black !important;
+
+        &::before {
+            border-color: @darkFg !important;
+        }
+
+        &:checked {
+            background: @darkBgDarker !important;
+        }
+    }
 }
 
 /****************************************************
